<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">


        <ImageView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Image"
            android:scaleType="fitXY"
            android:src="@drawable/tenor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="Short description"
            app:layout_constraintBottom_toTopOf="@+id/long_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <TextView
            android:id="@+id/long_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse metus esfdsfsdfdsfdsfsdfdsffdsfsdfsddf mauris nisl. Aenean at imperdiet mauris. Cras ut lobortis nisl. Praesent eget hendrerit justo, sit amet accumsan nulla. Nullam id ultricies dolor. Vestibulum et vulputate nisl. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin lectus nulla, hendrerit a pharetra et, dictum fringilla dolor. Integer pellentesque est vel consectetur aliquam. Suspendisse tempus tempus nulla nec fringilla. Curabitur sodales, sapien vel tincidunt malesuada, felis odio lobortis turpis, sit amet molestie augue eros eget ligula. Curabitur sodales ultrices luctus. Lorem ipsum dolor sit amet, consecteturg elit. Suspendisse metus enim, aliquam et ante ac, vehicula vestibulum erat. Nullam pharetra porttitor viverra. Pellentesque non turpis est. Sed nec mauris nisl. Aenean at imperdiet mauris. Cras ut lobortis nisl. Praesent eget hendrerit justo, it amet accumsan nulla. Nullam id ultricies dolor. Vestibulum et vulputate nisl. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin lectus nulla, hendrerit a pharetra et, dictum fringilla dolor. Integer pellentesque est vel consectetur aliquam. Suspendisse tempus tempus nulla nec fringilla. Curabitur sodales, sapien vel tincidunt malesuada, felis odio lobortis turpis, sit amet molestie augue eros eget ligula. Curabitur sodales ultrices luctus."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header" />

        <ImageView
            android:id="@+id/hurray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Compromised password"
            android:src="@drawable/ic_baseline_accessibility_new_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/long_description"
            app:layout_constraintVertical_bias="0.2" />


        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>